<resources>
    <string name="app_name">AndroidNightMode</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_new">New</string>
    <string name="navigation_history">History</string>
    <string name="navigation_random">Random</string>
    <string name="navigation_settings">Settings</string>

    <string name="change_theme">Change Theme</string>

    <string name="night_mode_set_night_mode">UiManager.setNight</string>
    <string name="night_mode_change_theme">Change Theme</string>
    <string name="night_mode_use_night_mode_helper">Use Night Mode Helper</string>
</resources>
