<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/main_nav_item_new"
            android:checked="true"
            android:title="@string/navigation_new" />
        <item
            android:id="@+id/main_nav_item_history"
            android:title="@string/navigation_history" />

        <item
            android:id="@+id/main_nav_item_switch_night_mode_1"
            android:title="@string/night_mode_set_night_mode" />
        <item
            android:id="@+id/main_nav_item_switch_night_mode_2"
            android:title="@string/night_mode_change_theme" />
        <item
            android:id="@+id/main_nav_item_switch_night_mode_3"
            android:title="@string/night_mode_use_night_mode_helper" />

    </group>

</menu>